# CUDA-nbody-simulation

./: CMakeLists.txt  camera.cpp  camera.h  controls.cpp  controls.h  main.cpp  nbody.cu  nbody.h  particle.cpp  particle.h  physics.cpp  physics.h  readme.md  render.cpp  render.h  shader.cpp  shader.h  simulation.cpp  simulation.h  utils.cpp  utils.h
